Fixed the spacing of the main menu's abandon game confirmation buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,7 @@ select
 	font-size: 20px;
 }
 #btnResumeGame,
+#btnConfirmAbandon,
 #btnAbandon > .confirmationButton
 { margin-right: 2% }
 #btnAbandonGame,
